# leonervis-code

./: .gitignore  .gitmodules  README.md  README_en.md  pyproject.toml
docs/: implemented-foundations.md  implemented-foundations_en.md
docs/decisions/: 0001-foundation-0-single-turn-loop.md  0002-foundation-0-deterministic-repl.md  0003-foundation-1a-in-memory-text-history.md  0004-foundation-1b-bounded-read-file-tool-loop.md  0005-foundation-2a-provider-neutral-model-routing.md  0006-foundation-2b-adapter-owned-compatibility-policy.md  0007-foundation-3a-anthropic-non-streaming-adapter.md  0008-foundation-3b-local-multi-provider-runtime.md  0009-foundation-3c-named-provider-profiles-and-runtime-manager.md  0010-foundation-3d-stable-profile-identity-and-durable-sessions.md  0011-decoupled-repl-presentation-and-slash-dispatch.md  0012-first-canonical-model-system-prompt.md  0013-provider-owned-model-context-capabilities.md  0014-target-specific-request-counting-and-preflight.md  0015-target-aware-runtime-switch-ux.md  0016-provider-neutral-effective-context-snapshot.md  0017-controlled-compact-transaction.md  0018-target-aware-resume-prepare-commit.md  0019-pre-turn-automatic-context-compaction.md  0020-foundation-1c-bounded-workspace-glob.md  0021-foundation-1d-bounded-literal-grep.md  0022-foundation-4a-permission-policy-contract.md  0023-foundation-4a-exact-action-identity-and-durable-audit.md  0024-foundation-4a-approval-coordination-and-controlled-write.md  0025-foundation-4a-action-audit-observability.md  (+6 more)
scripts/: banner_sample.py  generate_readme_logo.py
(+92 files in other folders)
